.provarCaches/00Df2000001KKNJEA4/objects/Information__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>details related to City departments, offices and services</description>
    <fields>
        <fullName>Additional_notes__c</fullName>
        <description>Notes</description>
        <label>Additional notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <label>Attachments</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Content_Owner_Info__c</fullName>
        <description>Primary owner of the Knowledge article.</description>
        <label>Content Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>311</fullName>
                    <default>true</default>
                    <label>311</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_to_Service_Request__c</fullName>
        <formula>If  

   (ISBLANK(Service_Type_Code__c), &quot;Not Applicable&quot;, HYPERLINK(&quot;https://dev-dallas311-dev.cs32.force.com/public/request/&quot; + Service_Type_Code__c + &quot;/location&quot;, &quot;Click Here&quot;))</formula>
        <label>Create Service Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_notes__c</fullName>
        <label>Internal notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Links__c</fullName>
        <label>Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Secondary_Owner_Category__c</fullName>
        <label>Secondary Owner (Category)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Type_Code__c</fullName>
        <label>Service Type Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_date_info__c</fullName>
        <label>Stop date</label>
        <type>Date</type>
    </fields>
    <label>Information</label>
    <pluralLabel>Information</pluralLabel>
</CustomObject>